<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LandingActivity">

    <View
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:id="@+id/rectangleView"
        android:background="@drawable/rectangle"
        android:layout_centerInParent="true">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_landing"
        android:textAlignment="center"
        android:fontFamily="@font/rock"
        android:textSize="15sp"
        android:layout_centerInParent="true">
    </TextView>

    <ImageView
        android:layout_width="138dp"
        android:layout_height="127dp"
        android:layout_above="@+id/rectangleView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="29dp"
        android:src="@drawable/logo_pemkot">
    </ImageView>

    <View
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:id="@+id/rectangleView2"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/rectangleView"
        android:layout_marginBottom="30dp">
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rectangleView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:fontFamily="@font/rock"
        android:text="@string/easpirasi"
        android:textColor="@color/colorFirst"
        android:textSize="20sp">

    </TextView>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/rectangleView"
        android:background="@color/colorFirst"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="60dp">
    </Button>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/rectangleView"
        android:layout_toRightOf="@id/btnLogin"
        android:background="@color/colorFirst"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="60dp">
    </Button>

</RelativeLayout>